--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "test:integration:api": "turbo run test:integration --no-daemon --filter=integration-tests-api",
     "test:integration:plugins": "turbo run test:integration --no-daemon --filter=integration-tests-plugins",
     "test:integration:repositories": "turbo run test:integration --no-daemon --filter=integration-tests-repositories",
-    "openapi:generate": "yarn ./packages/oas/oas-github-ci run ci",
+    "openapi:generate": "yarn ./packages/oas/oas-github-ci run ci --with-full-file",
     "medusa-oas": "yarn ./packages/oas/medusa-oas-cli run medusa-oas",
     "release:snapshot": "changeset publish --no-git-tags --snapshot --tag snapshot",
     "develop": "ts-node --transpile-only ./integration-tests/development/server.js",
