--- a/packages/design-system/ui-preset/package.json
+++ b/packages/design-system/ui-preset/package.json
@@ -19,7 +19,8 @@
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "generate": "toolbox tokens -o './src/theme'"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -29,12 +30,12 @@
     "tailwindcss": ">=3.0.0"
   },
   "devDependencies": {
+    "@medusajs/toolbox": "^0.0.1",
     "tailwindcss": "^3.3.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "packageManager": "yarn@3.5.0"
+  }
 }
