--- a/packages/design-system/ui/package.json
+++ b/packages/design-system/ui/package.json
@@ -80,7 +80,7 @@
     "vitest": "^0.32.2"
   },
   "dependencies": {
-    "@medusajs/icons": "*",
+    "@medusajs/icons": "^1.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -112,11 +112,6 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   },
   "browserslist": [
     "last 3 chrome versions",
