--- a/docs-util/packages/scripts/tsconfig.json
+++ b/docs-util/packages/scripts/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "module": "ESNext",
+    "moduleResolution": "node",
   },
-  "include": ["*.ts"]
+  "include": ["*.ts"],
+  "ts-node": {
+    "esm": true,
+  },
 }
