--- a/.github/workflows/generate-references.yml
+++ b/.github/workflows/generate-references.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       referenceName:
-        description: 'Reference to Generate'
+        description: 'Reference to Generate.'
         required: false
         default: 'all'
   release:
@@ -73,6 +73,7 @@ jobs:
           body: ${{ steps.pr-message.body }}
   api:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'release' || github.event.inputs.referenceName != 'all' }}
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
