--- a/.github/workflows/generate-references.yml
+++ b/.github/workflows/generate-references.yml
@@ -45,12 +45,12 @@ jobs:
         run: yarn build
         working-directory: docs-util
 
-      - name: Generate Product Module Reference
+      - name: Generate References
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: "yarn generate:reference ${{ github.event.inputs.referenceName }}"
         working-directory: docs-util/packages/scripts
 
-      - name: Generate Product Module Reference
+      - name: Generate References
         if: ${{ github.event_name != 'workflow_dispatch' }}
         run: "yarn generate:reference all"
         working-directory: docs-util/packages/scripts
