fix: exclude tests from generated index

--- a/packages/design-system/icons/tsconfig.json
+++ b/packages/design-system/icons/tsconfig.json
@@ -27,5 +27,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["dist", "build", "node_modules", "src/*.spec.tsx"]
+  "exclude": ["dist", "build", "node_modules", "./src/**/*.spec.tsx"]
 }
