--- a/packages/medusa-payment-stripe/package.json
+++ b/packages/medusa-payment-stripe/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@medusajs/admin": "^7.1.3",
     "@medusajs/medusa": "^1.17.0",
+    "@tanstack/react-table": "^8.7.9",
     "@types/stripe": "^8.0.417",
     "awilix": "^8.0.1",
     "cross-env": "^5.2.1",
@@ -37,6 +38,7 @@
   },
   "peerDependencies": {
     "@medusajs/medusa": "^1.12.0",
+    "@tanstack/react-table": "^8.7.9",
     "medusa-react": "^9.0.0"
   },
   "dependencies": {
