--- a/packages/medusa-payment-stripe/package.json
+++ b/packages/medusa-payment-stripe/package.json
@@ -34,6 +34,9 @@
   "peerDependenciesMeta": {
     "medusa-react": {
       "optional": true
+    },
+    "@tanstack/react-table": {
+      "optional": true
     }
   },
   "peerDependencies": {
