--- a/packages/design-system/icons/package.json
+++ b/packages/design-system/icons/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/medusajs/ui.git",
-    "directory": "packages/icons"
+    "url": "https://github.com/medusajs/medusa.git",
+    "directory": "packages/design-system/icons"
   },
   "main": "dist/cjs/medusa-icons.js",
   "main:umd": "dist/umd/medusa-icons.js",
