--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,12 @@
       ],
       "outputs": []
     },
+    "test:os": {
+      "dependsOn": [
+        "build"
+      ],
+      "outputs": []
+    },
     "test:integration": {
       "dependsOn": [
         "build"
