--- a/packages/medusa/package.json
+++ b/packages/medusa/package.json
@@ -40,7 +40,8 @@
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
     "serve": "node dist/app.js",
-    "test": "jest --runInBand --bail --detectOpenHandles --forceExit"
+    "test": "jest --runInBand --bail --detectOpenHandles --forceExit",
+    "test:os": "jest --runInBand --bail --detectOpenHandles --forceExit --config=jest.os.config.js"
   },
   "peerDependencies": {
     "medusa-interfaces": "^1.3.7",
