--- a/docs-util/packages/typedoc-plugin-custom/package.json
+++ b/docs-util/packages/typedoc-plugin-custom/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "glob": "^10.3.10",
     "typedoc-plugin-markdown": "^3.16.0",
+    "utils": "*",
     "yaml": "^2.3.3"
   }
 }
