--- a/docs-util/packages/typedoc-plugin-markdown-medusa/package.json
+++ b/docs-util/packages/typedoc-plugin-markdown-medusa/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/node": "^16.11.10",
     "copyfiles": "^2.4.1",
-    "typescript": "^4.6"
+    "typescript": "^4.6",
+    "utils": "*"
   },
   "keywords": [
     "typedocplugin",
