--- a/packages/medusa-fulfillment-webshipper/package.json
+++ b/packages/medusa-fulfillment-webshipper/package.json
@@ -39,7 +39,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "medusa-core-utils": "^1.2.0"
+    "medusa-core-utils": "^1.2.0",
+    "@medusajs/utils": "workspace:^"
   },
   "gitHead": "7770046479c361f375842a8605b15e5d7bc24624",
   "keywords": [
