--- a/packages/medusa-plugin-brightpearl/package.json
+++ b/packages/medusa-plugin-brightpearl/package.json
@@ -45,7 +45,8 @@
     "axios-rate-limit": "^1.2.1",
     "express": "^4.17.1",
     "medusa-core-utils": "^1.2.0",
-    "randomatic": "^3.1.1"
+    "randomatic": "^3.1.1",
+    "@medusajs/utils": "workspace:^"
   },
   "gitHead": "cd1f5afa5aa8c0b15ea957008ee19f1d695cbd2e",
   "keywords": [
