--- a/packages/medusa-fulfillment-webshipper/package.json
+++ b/packages/medusa-fulfillment-webshipper/package.json
@@ -35,12 +35,12 @@
     "medusa-interfaces": "^1.3.7"
   },
   "dependencies": {
+    "@medusajs/utils": "workspace:^",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "medusa-core-utils": "^1.2.0",
-    "@medusajs/utils": "workspace:^"
+    "medusa-core-utils": "^1.2.0"
   },
   "gitHead": "7770046479c361f375842a8605b15e5d7bc24624",
   "keywords": [
