--- a/packages/medusa-plugin-contentful/package.json
+++ b/packages/medusa-plugin-contentful/package.json
@@ -37,13 +37,13 @@
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.9.5",
+    "@medusajs/utils": "workspace:^",
     "body-parser": "^1.19.0",
     "contentful-management": "^5.27.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "medusa-core-utils": "^1.2.0",
-    "redis": "^3.0.2",
-    "@medusajs/utils": "workspace:^"
+    "redis": "^3.0.2"
   },
   "gitHead": "3bbd1e8507e00bc471de6ae3c30207999a4a4011",
   "keywords": [
