--- a/packages/medusa-source-shopify/package.json
+++ b/packages/medusa-source-shopify/package.json
@@ -21,14 +21,14 @@
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.15.4",
+    "@medusajs/utils": "workspace:^",
     "@shopify/shopify-api": "^1.4.1",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ioredis": "^4.27.9",
     "lodash": "^4.17.21",
-    "medusa-core-utils": "^1.2.0",
-    "@medusajs/utils": "workspace:^"
+    "medusa-core-utils": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
