docs(api-reference): added local server to list of servers

--- a/packages/medusa/oas/admin.oas.base.yaml
+++ b/packages/medusa/oas/admin.oas.base.yaml
@@ -233,6 +233,7 @@ tags:
       description: How to manage users
       url: https://docs.medusajs.com/modules/users/admin/manage-users
 servers:
+  - url: http://localhost:9000
   - url: https://api.medusa-commerce.com
 paths: { }
 components:
