--- a/www/apps/api-reference/specs/admin/openapi.full.yaml
+++ b/www/apps/api-reference/specs/admin/openapi.full.yaml
@@ -345,6 +345,7 @@ tags:
       description: How to manage users
       url: https://docs.medusajs.com/modules/users/admin/manage-users
 servers:
+  - url: http://localhost:9000
   - url: https://api.medusa-commerce.com
 paths:
   /admin/apps:
