fix publishable api key route

--- a/www/apps/api-reference/specs/admin/openapi.yaml
+++ b/www/apps/api-reference/specs/admin/openapi.yaml
@@ -345,6 +345,7 @@ tags:
       description: How to manage users
       url: https://docs.medusajs.com/modules/users/admin/manage-users
 servers:
+  - url: http://localhost:9000
   - url: https://api.medusa-commerce.com
 paths:
   /admin/apps:
@@ -563,8 +564,6 @@ paths:
     $ref: paths/admin_products_{id}_variants.yaml
   /admin/products/{id}/variants/{variant_id}:
     $ref: paths/admin_products_{id}_variants_{variant_id}.yaml
-  /admin/publishable-api-key/{id}:
-    $ref: paths/admin_publishable-api-key_{id}.yaml
   /admin/publishable-api-keys:
     $ref: paths/admin_publishable-api-keys.yaml
   /admin/publishable-api-keys/{id}:
