--- a/packages/medusa-fulfillment-webshipper/package.json
+++ b/packages/medusa-fulfillment-webshipper/package.json
@@ -35,6 +35,7 @@
     "medusa-interfaces": "^1.3.7"
   },
   "dependencies": {
+    "@medusajs/utils": "workspace:^",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
