--- a/packages/medusa-plugin-contentful/package.json
+++ b/packages/medusa-plugin-contentful/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.9.5",
+    "@medusajs/utils": "workspace:^",
     "body-parser": "^1.19.0",
     "contentful-management": "^5.27.1",
     "express": "^4.17.1",
