--- a/packages/medusa-source-shopify/package.json
+++ b/packages/medusa-source-shopify/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.15.4",
+    "@medusajs/utils": "workspace:^",
     "@shopify/shopify-api": "^1.4.1",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
