added eslint plugin

--- a/docs-util/packages/typedoc-plugin-custom/package.json
+++ b/docs-util/packages/typedoc-plugin-custom/package.json
@@ -32,6 +32,7 @@
     "typedoc"
   ],
   "dependencies": {
+    "eslint": "^8.53.0",
     "glob": "^10.3.10",
     "typedoc-plugin-markdown": "^3.16.0",
     "utils": "*",
