--- a/docs-util/packages/typedoc-plugin-custom/package.json
+++ b/docs-util/packages/typedoc-plugin-custom/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
-    "typescript": "^4.6"
+    "typescript": "^4.6",
+    "utils": "*"
   },
   "keywords": [
     "typedocplugin",
@@ -35,7 +36,6 @@
     "eslint": "^8.53.0",
     "glob": "^10.3.10",
     "typedoc-plugin-markdown": "^3.16.0",
-    "utils": "*",
     "yaml": "^2.3.3"
   }
 }
