--- a/docs-util/packages/typedoc-plugin-custom/package.json
+++ b/docs-util/packages/typedoc-plugin-custom/package.json
@@ -23,8 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
-    "typescript": "^4.6",
-    "utils": "*"
+    "typescript": "^4.6"
   },
   "keywords": [
     "typedocplugin",
@@ -36,6 +35,7 @@
     "eslint": "^8.53.0",
     "glob": "^10.3.10",
     "typedoc-plugin-markdown": "^3.16.0",
+    "utils": "*",
     "yaml": "^2.3.3"
   }
 }
