--- a/docs-util/packages/typedoc-plugin-markdown-medusa/package.json
+++ b/docs-util/packages/typedoc-plugin-markdown-medusa/package.json
@@ -23,8 +23,7 @@
   "devDependencies": {
     "@types/node": "^16.11.10",
     "copyfiles": "^2.4.1",
-    "typescript": "^4.6",
-    "utils": "*"
+    "typescript": "^4.6"
   },
   "keywords": [
     "typedocplugin",
@@ -33,6 +32,7 @@
     "typedoc"
   ],
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "utils": "*"
   }
 }
