--- a/.eslintignore
+++ b/.eslintignore
@@ -21,6 +21,8 @@ packages/*
 !packages/cache-inmemory
 !packages/create-medusa-app
 !packages/product
+!packages/orchestration
+!packages/workflows
 
 
 **/models/*
