--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -36,9 +36,9 @@
     "@babel/traverse": "7.22.5",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.1",
-    "@medusajs/icons": "workspace:^",
-    "@medusajs/ui": "workspace:^",
-    "@medusajs/ui-preset": "workspace:^",
+    "@medusajs/icons": "^1.1.0",
+    "@medusajs/ui": "^2.2.1",
+    "@medusajs/ui-preset": "^1.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@radix-ui/react-accordion": "^1.0.1",
     "@radix-ui/react-avatar": "^1.0.1",
