--- a/packages/medusa-plugin-brightpearl/package.json
+++ b/packages/medusa-plugin-brightpearl/package.json
@@ -41,7 +41,7 @@
     "medusa-interfaces": "^1.3.7"
   },
   "dependencies": {
-    "@medusajs/utils": "workspace:^",
+    "@medusajs/utils": "^1.10.5",
     "axios": "^0.19.2",
     "axios-rate-limit": "^1.2.1",
     "express": "^4.17.1",
