--- a/www/apps/api-reference/specs/admin/components/schemas/ProductCategory.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/ProductCategory.yaml
@@ -12,6 +12,7 @@ required:
   - id
   - is_active
   - is_internal
+  - metadata
   - mpath
   - name
   - parent_category_id
@@ -80,3 +81,13 @@ properties:
     description: The date with timezone at which the resource was updated.
     type: string
     format: date-time
+  metadata:
+    description: An optional key-value map with additional details
+    nullable: true
+    type: object
+    example:
+      car: white
+    externalDocs:
+      description: Learn about the metadata attribute, and how to delete and update it.
+      url: >-
+        https://docs.medusajs.com/development/entities/overview#metadata-attribute
