--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -42,7 +42,7 @@
     "@mikro-orm/cli": "5.7.12",
     "cross-env": "^5.2.1",
     "jest": "^29.6.3",
-    "medusa-test-utils": "^1.1.40",
+    "medusa-test-utils": "workspace:^",
     "pg-god": "^1.0.12",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
