--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,6 @@
 # All files not owned by other teams must be reviewed by the core team
 *                                               @medusajs/core
-/docs/                                          @medusajs/docs
+/docs-util/                                     @medusajs/docs
 /www/                                           @medusajs/docs
 /packages/admin                                 @medusajs/ui
 /packages/admin-ui                              @medusajs/ui
