--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "test": "turbo run test --no-daemon",
     "test:integration:packages": "turbo run test:integration --no-daemon --filter='./packages/*'",
     "test:integration:api": "turbo run test:integration --no-daemon --filter=integration-tests-api",
-    "test:integration:plugins": "turbo run test:integration --no-daemon --filter=integration-tests-plugins -- integration-tests/plugins/__tests__/workflows/utils/composer/compose.ts",
+    "test:integration:plugins": "turbo run test:integration --no-daemon --filter=integration-tests-plugins",
     "test:integration:repositories": "turbo run test:integration --no-daemon --filter=integration-tests-repositories",
     "openapi:generate": "yarn ./packages/oas/oas-github-ci run ci --with-full-file",
     "medusa-oas": "yarn ./packages/oas/medusa-oas-cli run medusa-oas",
