--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -18,6 +18,9 @@ runs:
       with:
         access_token: ${{ github.token }}
 
+    - name: Corepack
+      run: "corepack enable"
+
     - name: Setup Node.js environment
       uses: actions/setup-node@v3
       with:
