--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -19,7 +19,7 @@ runs:
         access_token: ${{ github.token }}
 
     - name: Corepack
-      run: "corepack enable"
+      run: corepack enable
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v3
