--- a/.github/workflows/test-cli-with-database.yml
+++ b/.github/workflows/test-cli-with-database.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Install Medusa cli
         run: npm i -g @medusajs/medusa-cli
 
+      - name: Set Yarn version
+        run: yarn set version 3.6.4
+
       - name: Create Medusa project
         run: |
           medusa new cli-test --skip-db
