--- a/packages/medusa-source-shopify/package.json
+++ b/packages/medusa-source-shopify/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.15.4",
-    "@medusajs/utils": "workspace:^",
+    "@medusajs/utils": "^1.10.5",
     "@shopify/shopify-api": "^1.4.1",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
