--- a/www/apps/api-reference/specs/store/openapi.full.yaml
+++ b/www/apps/api-reference/specs/store/openapi.full.yaml
@@ -10399,6 +10399,7 @@ components:
         - id
         - is_active
         - is_internal
+        - metadata
         - mpath
         - name
         - parent_category_id
@@ -10471,6 +10472,18 @@ components:
           description: The date with timezone at which the resource was updated.
           type: string
           format: date-time
+        metadata:
+          description: An optional key-value map with additional details
+          nullable: true
+          type: object
+          example:
+            car: white
+          externalDocs:
+            description: >-
+              Learn about the metadata attribute, and how to delete and update
+              it.
+            url: >-
+              https://docs.medusajs.com/development/entities/overview#metadata-attribute
     ProductCollection:
       title: Product Collection
       description: >-
