docs: added documentation pages for experimental features

--- a/www/apps/docs/vercel.json
+++ b/www/apps/docs/vercel.json
@@ -488,6 +488,10 @@
     {
       "source": "/development/endpoints/:path",
       "destination": "/development/api-routes/:path"
+    },
+    {
+      "source": "/modules/products/serverless-module",
+      "destination": "/experimental/product/overview"
     }
   ],
   "framework": "docusaurus-2",
