(wip) workflow generator tool

--- a/docs-util/package.json
+++ b/docs-util/package.json
@@ -19,5 +19,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
     "turbo": "latest"
+  },
+  "resolutions": {
+    "@medusajs/workflows": "portal:/Users/shahednasser/medusa/packages/workflows"
   }
 }
