--- a/packages/core-flows/package.json
+++ b/packages/core-flows/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@medusajs/core-flows",
-  "version": "0.3.0",
-  "description": "Set of core-flows for Medusa",
+  "version": "0.0.1",
+  "description": "Set of workflow definitions for Medusa",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
