--- a/packages/core-flows/package.json
+++ b/packages/core-flows/package.json
@@ -37,6 +37,6 @@
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
     "watch": "tsc --build --watch",
-    "test": "jest --runInBand --bail --forceExit"
+    "test": "jest --runInBand --bail --forceExit --passWithNoTests"
   }
 }
