--- a/docs-util/packages/workflows-diagrams-generator/package.json
+++ b/docs-util/packages/workflows-diagrams-generator/package.json
@@ -11,7 +11,7 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
-    "@medusajs/workflows-sdk": "^0.2.0-next-20231124140416",
+    "@medusajs/workflows-sdk": "link:../../../packages/workflows-sdk",
     "commander": "^11.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
