--- a/packages/pricing/package.json
+++ b/packages/pricing/package.json
@@ -54,7 +54,7 @@
     "@mikro-orm/migrations": "5.7.12",
     "@mikro-orm/postgresql": "5.7.12",
     "awilix": "^8.0.0",
-    "dotenv": "^16.1.4",
+    "dotenv": "16.3.1",
     "knex": "2.4.2"
   }
 }
