add nextjs repo url to create-medusa-app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,6 @@
 {
+    "i18n-ally.localesPaths": [
+        "packages/admin-ui/ui/public/locales",
+        "packages/admin-ui/ui/src/i18n"
+    ]
 }
