--- a/docs-util/packages/workflows-diagrams-generator/package.json
+++ b/docs-util/packages/workflows-diagrams-generator/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@medusajs/workflows-sdk": "latest",
+    "@mermaid-js/mermaid-cli": "^10.6.1",
     "commander": "^11.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
