--- a/www/apps/api-reference/package.json
+++ b/www/apps/api-reference/package.json
@@ -20,8 +20,8 @@
     "@types/mapbox__rehype-prism": "^0.8.0",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "@types/react-transition-group": "^4.4.6",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
