--- a/packages/medusa-file-local/package.json
+++ b/packages/medusa-file-local/package.json
@@ -34,6 +34,6 @@
   "keywords": [
     "medusa-plugin",
     "medusa-plugin-file",
-    "medusa-plugin-storage",
+    "medusa-plugin-storage"
   ]
 }
