chore(): Add engines to all package.json if needed

--- a/packages/medusa-file-local/package.json
+++ b/packages/medusa-file-local/package.json
@@ -6,6 +6,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": ">=16"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/medusajs/medusa",
