--- a/packages/medusa/package.json
+++ b/packages/medusa/package.json
@@ -16,6 +16,9 @@
     "dist",
     "oas"
   ],
+  "engines": {
+    "node": ">=16"
+  },
   "author": "Sebastian Rindom",
   "license": "MIT",
   "devDependencies": {
