docs(plugins): puts local-file plugin into correct category in site (#5804)
Closes [Issue #5782](https://github.com/medusajs/medusa/issues/5782)

Per Shahed, @medusajs/file-local plugin doesn't have the correct "storage" category, and its because the [package.json file](https://github.com/medusajs/medusa/blob/develop/packages/medusa-file-local/package.json) doesn't have the keyword medusa-plugin-storage. This PR is to add the keyword.

--- a/packages/medusa-file-local/package.json
+++ b/packages/medusa-file-local/package.json
@@ -33,6 +33,7 @@
   "gitHead": "81a7ff73d012fda722f6e9ef0bd9ba0232d37808",
   "keywords": [
     "medusa-plugin",
-    "medusa-plugin-file"
+    "medusa-plugin-file",
+    "medusa-plugin-storage"
   ]
 }
