--- a/www/apps/docs/package.json
+++ b/www/apps/docs/package.json
@@ -22,11 +22,12 @@
     "@babel/preset-react": "^7.18.6",
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.9.2",
-    "@docusaurus/core": "latest",
-    "@docusaurus/preset-classic": "latest",
-    "@docusaurus/remark-plugin-npm2yarn": "latest",
-    "@docusaurus/theme-mermaid": "latest",
-    "@mdx-js/react": "3",
+    "@docusaurus/core": "3.0.1",
+    "@docusaurus/preset-classic": "3.0.1",
+    "@docusaurus/remark-plugin-npm2yarn": "3.0.1",
+    "@docusaurus/theme-mermaid": "3.0.1",
+    "@mdx-js/mdx": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@medusajs/icons": "^1.0.0",
     "@svgr/webpack": "6.2.1",
     "autoprefixer": "^10.4.14",
@@ -64,9 +65,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.22.15",
-    "@docusaurus/module-type-aliases": "latest",
-    "@docusaurus/tsconfig": "latest",
-    "@docusaurus/types": "latest",
+    "@docusaurus/module-type-aliases": "3.0.1",
+    "@docusaurus/tsconfig": "3.0.1",
+    "@docusaurus/types": "3.0.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/react-transition-group": "^4.4.6",
