--- a/packages/design-system/ui/package.json
+++ b/packages/design-system/ui/package.json
@@ -102,7 +102,7 @@
     "@react-stately/datepicker": "^3.5.0",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
-    "cva": "beta",
+    "cva": "1.0.0-beta.1",
     "date-fns": "^2.30.0",
     "prism-react-renderer": "^2.0.6",
     "react-currency-input-field": "^3.6.11",
