--- a/packages/pricing/tsconfig.json
+++ b/packages/pricing/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@repositories": [
         "./src/repositories"
+      ],
+      "@moduleTypes": [
+        "./src/types"
       ]
     }
   },
