types instead of moduletypes

--- a/packages/pricing/tsconfig.json
+++ b/packages/pricing/tsconfig.json
@@ -32,7 +32,7 @@
       "@repositories": [
         "./src/repositories"
       ],
-      "@moduleTypes": [
+      "@types": [
         "./src/types"
       ]
     }
