--- a/docs-util/packages/react-docs-generator/package.json
+++ b/docs-util/packages/react-docs-generator/package.json
@@ -15,6 +15,7 @@
   "exports": "./dist/index.js",
   "bin": "dist/index.js",
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "glob": "^10.3.10",
     "react-docgen": "^7.0.1",
