--- a/packages/pricing/tsconfig.json
+++ b/packages/pricing/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "@models": ["./src/models"],
       "@services": ["./src/services"],
-      "@repositories": ["./src/repositories"]
+      "@repositories": ["./src/repositories"],
+      "@utils": ["./src/utils"]
     }
   },
   "include": ["src"],
